[package]
name = "yace-utils"
version = "0.0.1"
authors = ["Igor Pavlychev <zdemia@mail.ru>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = [ "derive" ] }
convert_case = { version = "0.6" }
indoc = "1.0"
yace-codegen = { version = "=0.0.1", path = "../codegen" }
yace = { version = "=0.0.1", features = [ "std" ], path = "../lib" }

[[bin]]
name = "gen-csr-register-names"
path = "gen-csr-register-names.rs"

[[bin]]
name = "gen-cxx-decoder"
path = "gen-cxx-decoder.rs"

[[bin]]
name = "gen-rvc-tables"
path = "gen-rvc-tables.rs"

